--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -6,3 +6,16 @@
 
 // Bootstrap
 @import '~bootstrap/scss/bootstrap';
+
+html {
+  font-family: sans-serif;
+  line-height: 1.1;
+  height: 100%;
+}
+
+body {
+  font-size: 16px;
+  font-family: 'Nunito', sans-serif;
+  font-weight: 400;
+  height: 100%;
+}
