--- a/public/css/app.css
+++ b/public/css/app.css
@@ -11356,3 +11356,63 @@ a.text-dark:focus {
   }
 }
 
+html {
+  font-family: sans-serif;
+  line-height: 1.1;
+  height: 100%;
+}
+
+body {
+  font-size: 16px;
+  font-family: "Nunito", sans-serif;
+  font-weight: 400;
+  height: 100%;
+}
+
+.taskContents {
+  margin: 10px auto 0;
+}
+
+.taskContents_title h2 {
+  font-size: 22px;
+}
+
+.taskContents_title,
+.taskContents_content,
+.taskContents_list,
+.taskContents_start,
+.taskContents_end,
+.taskContents_status {
+  border-bottom: 1px solid #ccc;
+  margin-bottom: 30px;
+}
+
+.taskContents_btnArea {
+  margin-top: 40px;
+  text-align: center;
+}
+
+.taskContents_btnArea > a {
+  display: block;
+}
+
+.taskContents_btnArea > a.edit_btn {
+  max-width: 200px;
+  margin: 0 auto;
+  background: #026aa7;
+  padding: 7px;
+  border-radius: 10px;
+  color: #fff;
+  -webkit-transition: opacity 0.5s;
+  transition: opacity 0.5s;
+  text-decoration: none;
+}
+
+.taskContents_btnArea > a.edit_btn:hover {
+  opacity: 0.7;
+}
+
+.taskContents_btnArea > a.delete_btn {
+  margin-top: 20px;
+}
+
