Add: fullcalendar更新 デザイン微修正

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -11369,3 +11369,14 @@ body {
   height: 100%;
 }
 
+a {
+  color: black;
+}
+
+a:hover {
+  text-decoration: none;
+  opacity: 0.7;
+  color: black;
+  font-weight: bold;
+}
+
