--- a/public/css/app.css
+++ b/public/css/app.css
@@ -11374,9 +11374,15 @@ a {
 }
 
 a:hover {
-  text-decoration: none;
   opacity: 0.7;
   color: black;
   font-weight: bold;
+}
+
+table td a {
+  text-decoration: none;
+  display: block;
+  width: 100%;
+  height: 100%;
 }
 
