--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -29,3 +29,11 @@ a:hover {
   color: black;
   font-weight: bold;
 }
+
+table td a{
+  text-decoration: none;
+
+  display: block;
+  width: 100%;
+  height: 100%;
+} 
